feat: basic present
