# internal/constant/model/smart_card_model.go
@@ -9,10 +9,10 @@ type SmartCardRequest struct {
 }
 
 type ListSmartCardRequest struct {
-	OwnerRole string `form:"owner-role" binding:"omitempty,oneof=employee santri"`
-	Q         string `form:"q"`
-	Page      int32  `form:"page" binding:"omitempty,gte=1"`
-	Limit     int32  `form:"limit" binding:"omitempty,gte=1"`
+	CardOwner db.CardOwner `form:"card-owner" binding:"omitempty,oneof=santri employee none all"`
+	Q         string       `form:"q"`
+	Page      int32        `form:"page" binding:"omitempty,gte=1"`
+	Limit     int32        `form:"limit" binding:"omitempty,gte=1"`
 }
 
 type UpdateSmartCardRequest struct {
@@ -35,11 +35,11 @@ type ListSmartCardResponse struct {
 
 type SmartCardComplete struct {
 	SmartCard
-	OwnerRole db.RoleType      `json:"owned_role"`
-	Details   SmartCardDetails `json:"details"`
+	Owner OwenerDetails `json:"owner"`
 }
 
-type SmartCardDetails struct {
-	ID   int32  `json:"id"`
-	Name string `json:"name"`
+type OwenerDetails struct {
+	ID   int32       `json:"id"`
+	Role db.RoleType `json:"role"`
+	Name string      `json:"name"`
 }
